tests/NormalTests/paczka1/small_fuzzy/73094108.err
Error in line 4: qjw S175 90,8
Error in line 8: VlZ7kCM6N S736 37,2
